--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "mysql2": "^3.2.3",
     "ws": "^8.13.0"
   }
 }
